force-app/main/default/objects/RICOReferral__c/RICOReferral__c.object-meta.xml
<CustomObject>
    <label>RICO Referral</label>
    <nameField>
        <displayFormat>RICO-{000000}</displayFormat>
        <label>RICO Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RICO Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>