force-app/main/default/objects/RICOReferral__c/fields/BoarddidnotReceiveNoticeFormula__c.field-meta.xml
<CustomField>
    <fullName>BoarddidnotReceiveNoticeFormula__c</fullName>
    <formula>IF(  CertifytheBoarddidNOTReceiveNotice__c  =True,  &apos;X&apos; , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board did not Receive Notice Formula</label>
    <type>Text</type>
</CustomField>