force-app/main/default/objects/RICOReferral__c/fields/CertifyFormula__c.field-meta.xml
<CustomField>
    <fullName>CertifyFormula__c</fullName>
    <formula>IF(  CertifythattheBoardReceivedNotuce__c  =True,  &apos;The Board DID receive notification on &apos; + TEXT(DateBoardReceivedNotice__c) , &apos;The Board DID NOT receive notification.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certify Formula</label>
    <type>Text</type>
</CustomField>