force-app/main/default/objects/RICOReferral__c/fields/CertifySelection__c.field-meta.xml
<CustomField>
    <fullName>CertifySelection__c</fullName>
    <formula>IF(AND(
   CertifythattheBoardReceivedNotuce__c    = TRUE,
   CertifytheBoarddidNOTReceiveNotice__c     = TRUE

), 

&quot;BOTH&quot;, 

&quot;ONE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certify Selection</label>
    <type>Text</type>
</CustomField>