force-app/main/default/objects/RICOReferral__c/fields/CertifythattheBoardReceivedNotuce__c.field-meta.xml
<CustomField>
    <fullName>CertifythattheBoardReceivedNotuce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certify that the Board Received Notice</label>
    <type>Checkbox</type>
</CustomField>