force-app/main/default/objects/RICOReferral__c/fields/CertifytheBoarddidNOTReceiveNotice__c.field-meta.xml
<CustomField>
    <fullName>CertifytheBoarddidNOTReceiveNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certify the Board did NOT Receive Notice</label>
    <type>Checkbox</type>
</CustomField>