force-app/main/default/objects/RICOReferral__c/fields/Complainant__c.field-meta.xml
<CustomField>
    <fullName>Complainant__c</fullName>
    <label>Complainant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>