force-app/main/default/objects/RICOReferral__c/fields/ComplainantAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>ComplainantAddressStreet__c</fullName>
    <label>Complainant Address Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>