force-app/main/default/objects/RICOReferral__c/fields/ComplainantCity__c.field-meta.xml
<CustomField>
    <fullName>ComplainantCity__c</fullName>
    <label>Complainant City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>