force-app/main/default/objects/RICOReferral__c/fields/ComplainantPhone__c.field-meta.xml
<CustomField>
    <fullName>ComplainantPhone__c</fullName>
    <label>Complainant Phone</label>
    <type>Phone</type>
</CustomField>