force-app/main/default/objects/RICOReferral__c/fields/ComplainantState__c.field-meta.xml
<CustomField>
    <fullName>ComplainantState__c</fullName>
    <label>Complainant State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>