force-app/main/default/objects/RICOReferral__c/fields/ComplainantZipcode__c.field-meta.xml
<CustomField>
    <fullName>ComplainantZipcode__c</fullName>
    <label>Complainant Zip code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>