force-app/main/default/objects/RICOReferral__c/fields/DateBoardReceivedNotice__c.field-meta.xml
<CustomField>
    <fullName>DateBoardReceivedNotice__c</fullName>
    <label>Date Board Received Notice</label>
    <type>Date</type>
</CustomField>