force-app/main/default/objects/RICOReferral__c/fields/DependentLicensee__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensee__c</fullName>
    <formula>License__r.DependentLicenseeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Licensee</label>
    <type>Text</type>
</CustomField>