force-app/main/default/objects/RICOReferral__c/fields/DependentLicenseMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseMailingAddress__c</fullName>
    <formula>License__r.DependentLicense__r.MailingStreet__c + &quot;, &quot; +  
License__r.DependentLicense__r.MailingCity__c + &quot;, &quot; + 
TEXT(License__r.DependentLicense__r.MailingState__c)  + &quot;, &quot; + 
 License__r.DependentLicense__r.MailingZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Mailing Address</label>
    <type>Text</type>
</CustomField>