force-app/main/default/objects/RICOReferral__c/fields/DependentLicenseNo__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseNo__c</fullName>
    <formula>License__r.DependentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License No.</label>
    <type>Text</type>
</CustomField>