force-app/main/default/objects/RICOReferral__c/fields/DependentLicensePhone__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensePhone__c</fullName>
    <formula>License__r.DependentLicense__r.LicensePhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Phone</label>
    <type>Text</type>
</CustomField>