force-app/main/default/objects/RICOReferral__c/fields/DocumentsAttached__c.field-meta.xml
<CustomField>
    <fullName>DocumentsAttached__c</fullName>
    <label>Documents Attached</label>
    <length>255</length>
    <type>Text</type>
</CustomField>