force-app/main/default/objects/RICOReferral__c/fields/LicenseePhone__c.field-meta.xml
<CustomField>
    <fullName>LicenseePhone__c</fullName>
    <formula>License__r.Licensee__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee Phone</label>
    <type>Text</type>
</CustomField>