force-app/main/default/objects/RICOReferral__c/fields/ReferralDate__c.field-meta.xml
<CustomField>
    <fullName>ReferralDate__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>