force-app/main/default/objects/RICOReferral__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <formula>License__r.LicenseeNameFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respondent</label>
    <type>Text</type>
</CustomField>