force-app/main/default/objects/RICOReferral__c/fields/SendtoEmail__c.field-meta.xml
<CustomField>
    <fullName>SendtoEmail__c</fullName>
    <label>Send to Email</label>
    <type>Email</type>
</CustomField>