force-app/main/default/objects/RICOReferral__c/fields/StaffContact__c.field-meta.xml
<CustomField>
    <fullName>StaffContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RICO_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>