force-app/main/default/objects/RICOReferral__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>One of the following:  Request for Inspection, Request for Investigation, Information, or Forwarding Complaint Received by PVL in Error.</inlineHelpText>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>