force-app/main/default/objects/RICOReferral__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <label>Witness(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>