force-app/main/default/objects/RICOReferral__c/validationRules/AllowonlyoneCertifyAnswer.validationRule-meta.xml
<ValidationRule>
    <fullName>AllowonlyoneCertifyAnswer</fullName>
    <active>true</active>
    <errorConditionFormula>CertifySelection__c = &quot;BOTH&quot;</errorConditionFormula>
    <errorMessage>In the Disciplinary Actions section, indicate if the Board Received Notice or not.  You selected both.</errorMessage>
</ValidationRule>